Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1522

Can open Settings dialog twice, leading to crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.1.0
    • Qt Creator 1.3.85 (2.0.0-rc1)
    • All Other Issues
    • None
    • 44bf80a6db1dc65dc1efae1188cee3466bef6e07

    Description

      To reproduce:

      Open a project in Creator, set up a build configuration with a Qt which has no debugging helpers.
      Start debugging this project with cdb.
      While the project is being built, open the settings dialog.

      When building the project finished, a dialog will pop up warning about missing debugging helpers.
      Click "Open Qt preferences". The settings dialog will open for a second time. Close it and debugging will start.
      Close the other open settings dialog and Creator will crash

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes