Avoid opening settings dialog multiple times and don't crash.

Task-number: QTCREATORBUG-1522